WIP fix sonar issues